// 应用交互消息定义.

//***************************************************************************
// 消息协议号 ： 服务端主动推送的以  BroadCast开头  如 xxx  ***********************
// 消息结构   ： server -> client 以 Response   如 BroadCastXXResponse结尾******
// 消息结构   ： server回复client  以 Response   如 xxxResponse 结尾  ***********
// 消息结构   ： client->server   以 Request    如 xxxRequest  结尾  ***********
//***************************************************************************

//*************************************************************************** 
//协议ID规则      : 0xXXZZZZ, 其中 XX 为服务ID头, ZZZZ为具体的协议ID, 示例如下 ****  
//保留id协议      : 0x00ZZZZ   *********************************************** 
//mainServer协议 : 0x01ZZZZ  主数据服务协议************************************
//accountSer协议 : 0x02ZZZZ  账号服务 协议 ************************************
//screenSer 协议 : 0x03ZZZZ  战斗服务 协议 ************************************
//taskServer协议 : 0x04ZZZZ  任务服务 协议 ************************************
//chatServer协议 : 0x05ZZZZ  聊天服务 协议 ************************************
//getaway   协议 : 0x06ZZZZ  网关服务 协议 ************************************
//ServiceMgr协议 : 0x09ZZZZ  服务管理 协议(客户端不能调用) **********************
//CTRlServer协议 : 0x0aZZZZ  控制服务 协议 ************************************ 
//**************************************************************************

syntax = "proto3";
package gameMessageCore;
option go_package = "./messageGo/proto";


enum EnvelopeType {    
    //保留id协议      : 0x00ZZZZ   *********************************************** 
    Unknown = 0;

    //mainServer协议 : 0x01ZZZZ  主数据服务协议************************************

    //accountSer协议 : 0x02ZZZZ  账号服务 协议 ************************************

    //screenSer 协议 : 0x03ZZZZ  战斗服务 协议 ************************************

    //taskServer协议 : 0x04ZZZZ  任务服务 协议 ************************************

    //chatServer协议 : 0x05ZZZZ  聊天服务 协议 ************************************

    //getaway   协议 : 0x06ZZZZ  网关服务 协议 ************************************
    Ping = 0x060001;

    //ServiceMgr协议 : 0x09ZZZZ  服务管理 协议(客户端不能调用) **********************

    //CTRlServer协议 : 0x0aZZZZ  控制服务 协议 ************************************ 

}
